@@ -6,10 +6,10 @@
  *
  * Copyright (c) 1995-1998 Sun Microsystems, Inc.
  *
- * See the file "license.terms" for information on usage and redistribution of
- * this file, and for a DISCLAIMER OF ALL WARRANTIES.
+ * See the file "license.terms" for information on usage and redistribution
+ * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixFile.c,v 1.32.4.17 2010/04/25 15:40:54 dgp Exp $
+ * RCS: @(#) $Id: tclUnixFile.c,v 1.32.4.18 2010/06/21 20:23:42 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -710,7 +710,7 @@ TclpGetNativeCwd(
 	char *newCd = ckalloc((unsigned) strlen(buffer) + 1);
 
 	strcpy(newCd, buffer);
-	return (ClientData) newCd;
+	return newCd;
     }
 
     /*
